{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 17,
  "lineage": "b4fb0392-c3a5-2376-82e4-177ef73d002a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0697bc43c92e681f6",
            "description": "bastion",
            "filter": null,
            "id": "sg-0697bc43c92e681f6",
            "name": "terraform-20230709080819428900000002",
            "tags": {
              "Envrionment": "dev",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03cf6b100207598f3",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-03cf6b100207598f3",
            "name": "alb_sg",
            "tags": {
              "Envrionment": "dev",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0bc88cf876e99a7da",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0bc88cf876e99a7da",
            "name": "main_web_server_sg",
            "tags": {
              "Envrionment": "dev",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dev_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0b49c0d8e4692de15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "192.169.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49c0d8e4692de15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_WebServer-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-08b43bdd9aa157a37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "192.169.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b43bdd9aa157a37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_WebServer-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0bed53ee3ad1be64e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "192.169.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed53ee3ad1be64e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_DBMS-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-07264e54f07d96536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.169.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07264e54f07d96536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_DBMS-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dev_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0deb03b339d938c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 249,
            "cidr_block": "192.169.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deb03b339d938c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_ALB\u0026NAT",
              "Tier": "public"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0131b2be7356360af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.169.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0131b2be7356360af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev_ALB",
              "Tier": "public"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "dev_whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-083e74f4f28c5645d",
            "cidr_block": "192.169.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07bf2aa7c7dacc143",
                "cidr_block": "192.169.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083e74f4f28c5645d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061aefa4e95bb3234",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "Dev",
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "dev_gnualb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/dev-gnualb-web/2778f9e3389505ba",
            "arn_suffix": "app/dev-gnualb-web/2778f9e3389505ba",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-gnualb-web-1917884867.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/dev-gnualb-web/2778f9e3389505ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-gnualb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03cf6b100207598f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0131b2be7356360af"
              },
              {
                "subnet_id": "subnet-0deb03b339d938c3a"
              }
            ],
            "subnets": [
              "subnet-0131b2be7356360af",
              "subnet-0deb03b339d938c3a"
            ],
            "tags": {
              "Name": "dev_gnualb_web"
            },
            "tags_all": {
              "Name": "dev_gnualb_web"
            },
            "vpc_id": "vpc-083e74f4f28c5645d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "data.aws_security_group.dev_elb_sg",
            "data.aws_subnet.dev_public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:listener/app/dev-gnualb-web/2778f9e3389505ba/c7c110777a0af532",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:listener/app/dev-gnualb-web/2778f9e3389505ba/c7c110777a0af532",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:loadbalancer/app/dev-gnualb-web/2778f9e3389505ba",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.dev_gnualb_web",
            "aws_alb_target_group.dev_alb_web_tg",
            "data.aws_security_group.dev_elb_sg",
            "data.aws_subnet.dev_public",
            "data.aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "dev_alb_web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512",
            "arn_suffix": "targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/gnuboard",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-cand0-gnuboard-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev_Gnuboard Target Group"
            },
            "tags_all": {
              "Name": "dev_Gnuboard Target Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "data.aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "dev_alb_tg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512-20230709082207953300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:569083195829:targetgroup/dev-cand0-gnuboard-target-group/c6a1a522120c3512",
            "target_id": "i-019b5a644e8d2bead"
          },
          "dependencies": [
            "aws_alb_target_group.dev_alb_web_tg",
            "aws_instance.dev_web_server",
            "aws_network_interface.dev_web_network_interface",
            "data.aws_iam_instance_profile.dev_ec2_server",
            "data.aws_security_group.dev_web",
            "data.aws_subnet.dev_private",
            "data.aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02727842b84fc892d",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0b30e2f70ef9b618d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0b30e2f70ef9b618d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080880474edd026d1",
            "private_dns": "ip-192-169-11-140.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.169.11.140",
            "public_ip": "18.179.46.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8c695370a9f2dc2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0deb03b339d938c3a",
            "tags": {
              "Environment": "dev",
              "Name": "dev_bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0697bc43c92e681f6"
            ]
          },
          "dependencies": [
            "data.aws_iam_instance_profile.dev_ec2_server",
            "data.aws_security_group.dev_bastion",
            "data.aws_subnet.dev_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0842923717ad5c00c",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-019b5a644e8d2bead",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-019b5a644e8d2bead",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-050fc888fa8d3779e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050fc888fa8d3779e",
            "private_dns": "ip-192-169-1-100.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.169.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f49d46047ac9fae4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49c0d8e4692de15",
            "tags": {
              "Environment": "Dev",
              "Name": "dev_web"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dev_web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc88cf876e99a7da"
            ]
          },
          "dependencies": [
            "aws_network_interface.dev_web_network_interface",
            "data.aws_iam_instance_profile.dev_ec2_server",
            "data.aws_security_group.dev_web",
            "data.aws_subnet.dev_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev_web_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:network-interface/eni-050fc888fa8d3779e",
            "attachment": [
              {
                "attachment_id": "eni-attach-03bd65badffb50e50",
                "device_index": 0,
                "instance": "i-019b5a644e8d2bead"
              }
            ],
            "id": "eni-050fc888fa8d3779e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:31:b6:87:f2:c7",
            "owner_id": "569083195829",
            "private_ip": "192.169.1.100",
            "private_ip_list": [
              "192.169.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.169.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bc88cf876e99a7da"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49c0d8e4692de15",
            "tags": {
              "Name": "dev_primary_network_interface"
            },
            "tags_all": {
              "Name": "dev_primary_network_interface"
            }
          },
          "dependencies": [
            "data.aws_security_group.dev_web",
            "data.aws_subnet.dev_private"
          ]
        }
      ]
    }
  ]
}